tests de JUNIT arreglados